# zem

./: .gitignore  .gitmodules  CMakeLists.txt  README.org  conanfile.txt  run.sh
cmake/: FindGuile.cmake  FindReadline.cmake
extensions/: CMakeLists.txt
extensions/tree-sitter/: CMakeLists.txt  tree-sitter.cpp
extensions/tree-sitter-cc/: CMakeLists.txt  tree-sitter-cc.c
extensions/tree-sitter-cpp/: CMakeLists.txt  tree-sitter-cpp.c
include/: color_value.h  font.h  intern_string.h  keymap.h  renderer.h  rope.h  shader_program.h  singleton.h  vector2.h
modules/: emacsy
modules/zem/: init.scm
modules/zem/core/: buffer.scm  commands.scm  faces.scm  font-lock.scm  mode.scm  text-prop.scm
modules/zem/progmodes/: cc-mode.scm  prog-mode.scm
modules/zem/syntax/: tree-sitter.scm
modules/zem/themes/: doom-one.scm  monokai.scm  theme.scm
modules/zem/ui/: buffer-view.scm  highlight.scm  minibuffer-view.scm  root-view.scm  style.scm  view.scm
modules/zem/util/: avl.scm  plist.scm
src/: font.cpp  intern_string.cpp  keymap.c  main.cpp  renderer.cpp  rope.cpp  shader_program.cpp
src/api/: api.cpp  font.cpp  renderer.cpp  rope.cpp  tree-sitter.cpp
